cmake_minimum_required(VERSION 2.8)
project(collections_test C)

set(arraylist_test_sources arraylist_test.c)
#set(deque_test_sources deque_test.c)
set(dllist_test_sources dllist_test.c)
#set(hashset_test_sources hashset_test.c)
#set(hashtable_test_sources hashtable_test.c)
#set(queue_test_sources queue_test.c)
#set(slist_test_sources slist_test.c)
#set(stack_test_sources stack_test.c)
#set(test_test_sources test.c)
set(avl_tree_test_sources avl_tree_test.c)
#set(treetable_test_sources treetable_test.c)
#
include_directories(${PROJECT_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)
#
add_executable(arraylist_test ${arraylist_test_sources})
#add_executable(deque_test ${deque_test_sources})
#add_executable(hashset_test ${hashset_test_sources})
#add_executable(hashtable_test ${hashtable_test_sources})
add_executable(dllist_test ${dllist_test_sources})
#add_executable(queue_test ${queue_test_sources})
#add_executable(slist_test ${slist_test_sources})
#add_executable(stack_test ${stack_test_sources})
add_executable(avl_tree_test ${avl_tree_test_sources})
#add_executable(treetable_test ${treetable_test_sources})
#
#add_library(${PROJECT_NAME} SHARED)
#
#set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
#target_link_libraries(${PROJECT_NAME})
#
target_link_libraries(arraylist_test collections)
#target_link_libraries(deque_test collections)
target_link_libraries(dllist_test collections)
#target_link_libraries(hashset_test collections)
#target_link_libraries(hashtable_test collections)
#target_link_libraries(queue_test collections)
#target_link_libraries(slist_test collections)
#target_link_libraries(stack_test collections)
target_link_libraries(avl_tree_test collections)
#target_link_libraries(treetable_test collections)

#target_link_libraries(array_test collections ${PROJECT_NAME})
#target_link_libraries(deque_test collections ${PROJECT_NAME})
#target_link_libraries(list_test collections ${PROJECT_NAME})
#target_link_libraries(hashset_test collections ${PROJECT_NAME})
#target_link_libraries(hashtable_test collections ${PROJECT_NAME})
#target_link_libraries(queue_test collections ${PROJECT_NAME})
#target_link_libraries(slist_test collections ${PROJECT_NAME})
#target_link_libraries(stack_test collections ${PROJECT_NAME})
#target_link_libraries(avl_tree_test collections ${PROJECT_NAME})
#target_link_libraries(treetable_test collections ${PROJECT_NAME})
#
add_test(ArrayListTest arraylist_test)
#add_test(DequeTest deque_test)
add_test(DLListTest dllist_test)
#add_test(HashSetTest hashset_test)
#add_test(HashTableTest hashtable_test)
#add_test(QueueTest queue_test)
#add_test(SlistTest slist_test)
#add_test(StackTest stack_test)
add_test(AVLTreeTest avl_tree_test)
#add_test(TreeTableTest treetable_test)
